outputs_20260326-054441-6885217a/codegen/production/build_logs/compiler_stderr.log
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\mocks\IfxGtm_PinMap.c:12:15: error: redefinition of 's_setTomTout_count'
   12 | static uint32 s_setTomTout_count = 0;
      |               ^~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\mocks\IfxGtm_PinMap.c:6:15: note: previous definition of 's_setTomTout_count' with type 'uint32' {aka 'unsigned int'}
    6 | static uint32 s_setTomTout_count = 0;
      |               ^~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\mocks\IfxGtm_PinMap.c:25:8: error: redefinition of 'IfxGtm_PinMap_Mock_GetCallCount_setTomTout'
   25 | uint32 IfxGtm_PinMap_Mock_GetCallCount_setTomTout(void) { return s_setTomTout_count; }
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\mocks\IfxGtm_PinMap.c:21:8: note: previous definition of 'IfxGtm_PinMap_Mock_GetCallCount_setTomTout' with type 'uint32(void)' {aka 'unsigned int(void)'}
   21 | uint32 IfxGtm_PinMap_Mock_GetCallCount_setTomTout(void) {
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity.h:22,
                 from C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c:1:
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c: In function 'test_GTM_TOM_3_Phase_Inverter_PWM_init_SetsExpectedConfigValues':
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c:71:23: error: 'pushPull' undeclared (first use in this function)
   71 |     TEST_ASSERT_EQUAL(pushPull, IfxGtm_PinMap_Mock_GetLastArg_setTomTout_outputMode());
      |                       ^~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:897:133: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_INT'
  897 | #define UNITY_TEST_ASSERT_EQUAL_INT(expected, actual, line, message)                             UnityAssertEqualNumber((UNITY_INT)(expected), (UNITY_INT)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_INT)
      |                                                                                                                                     ^~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c:71:5: note: in expansion of macro 'TEST_ASSERT_EQUAL'
   71 |     TEST_ASSERT_EQUAL(pushPull, IfxGtm_PinMap_Mock_GetLastArg_setTomTout_outputMode());
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c:71:23: note: each undeclared identifier is reported only once for each function it appears in
   71 |     TEST_ASSERT_EQUAL(pushPull, IfxGtm_PinMap_Mock_GetLastArg_setTomTout_outputMode());
      |                       ^~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:897:133: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_INT'
  897 | #define UNITY_TEST_ASSERT_EQUAL_INT(expected, actual, line, message)                             UnityAssertEqualNumber((UNITY_INT)(expected), (UNITY_INT)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_INT)
      |                                                                                                                                     ^~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c:71:5: note: in expansion of macro 'TEST_ASSERT_EQUAL'
   71 |     TEST_ASSERT_EQUAL(pushPull, IfxGtm_PinMap_Mock_GetLastArg_setTomTout_outputMode());
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c:72:23: error: 'cmosAutomotiveSpeed1' undeclared (first use in this function)
   72 |     TEST_ASSERT_EQUAL(cmosAutomotiveSpeed1, IfxGtm_PinMap_Mock_GetLastArg_setTomTout_padDriver());
      |                       ^~~~~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\unity/unity_internals.h:897:133: note: in definition of macro 'UNITY_TEST_ASSERT_EQUAL_INT'
  897 | #define UNITY_TEST_ASSERT_EQUAL_INT(expected, actual, line, message)                             UnityAssertEqualNumber((UNITY_INT)(expected), (UNITY_INT)(actual), (message), (UNITY_LINE_TYPE)(line), UNITY_DISPLAY_STYLE_INT)
      |                                                                                                                                     ^~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c:72:5: note: in expansion of macro 'TEST_ASSERT_EQUAL'
   72 |     TEST_ASSERT_EQUAL(cmosAutomotiveSpeed1, IfxGtm_PinMap_Mock_GetLastArg_setTomTout_padDriver());
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c: In function 'test_GTM_TOM_3_Phase_Inverter_PWM_updateUVW_MultipleCalls_ProgressesCorrectly':
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c:142:13: warning: unused variable 'w_2' [-Wunused-variable]
  142 |     float32 w_2 = IfxGtm_Pwm_Mock_GetArgHistory_updateChannelsDutyImmediate(2u, 2u);
      |             ^~~
C:\Users\extalth\Downloads\Infineon\infineon_POC_MVP\outputs_20260326-054441-6885217a\c5bc9be6-7a3\Implement_a_3-phase_inverter_PWM_on_KIT_A2G_TC387_r_20260326_144402\attempts\phase_003_build\test\test_GTM_TOM_3_Phase_Inverter_PWM.c:141:13: warning: unused variable 'v_2' [-Wunused-variable]
  141 |     float32 v_2 = IfxGtm_Pwm_Mock_GetArgHistory_updateChannelsDutyImmediate(2u, 1u);
      |             ^~~
